ibuilder/tests/not_compile/incompatible_default.stderr
error[E0600]: cannot apply unary operator `-` to type `u64`
 --> $DIR/incompatible_default.rs:5:26
  |
5 |     #[ibuilder(default = -123)]
  |                          ^ cannot apply unary operator `-`
  |
  = note: unsigned values cannot be negated
